Laying out the project structures

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 	},
 	"dependencies": {
 		"body-parser": "*",
+		"bookshelf": "*",
+		"knex": "*",
 		"bluebird": "*",
 		"connect-debounce": "*",
 		"connect-timeout": "*",
