--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
 		"url": "https://github.com/parthamallik/where-is-my-driver/issues",
 		"email": "mallik.partha@gmail.com"
 	},
-	"licenses": "MITNFA"
+	"license": "MITNFA"
 }
