--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"body-parser": "*",
 		"bookshelf": "*",
+		"chai": "*",
 		"knex": "*",
 		"bluebird": "*",
 		"connect-debounce": "*",
